ajout du meta viewport

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="maximum-scale=1.0,width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Booki</title>
     <script src="https://kit.fontawesome.com/97e0bfc9c9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/normalize.css">
