correction du footer, de la police, des margins

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
         <main>
             <section id="section1">
-                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre ville ou en pleine nature</p>
+                    <div class="section1_heading">
+                        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                        <p>En plein centre ville ou en pleine nature</p>
+                    </div>
                     <form method="post" action="#">
                         <span id="search">
                             <i class="fas fa-map-marker-alt"></i>
@@ -396,7 +398,7 @@
         </main>
 
         <!-- Footer -->
-
+    </div>
         <footer>
             <div class="footer_columns">
                 <h3 class="h3_footer">A propos</h3>
@@ -431,6 +433,6 @@
                 </a>
             </div>
         </footer>
-    </div>    
+       
 </body>
 </html>
