correction d'une erreur W3C

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="maximum-scale=1.0,width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
     <script src="https://kit.fontawesome.com/97e0bfc9c9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/normalize.css">
@@ -102,7 +102,6 @@
                                     <source media="(max-width: 768px)" srcset="./images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <source media="(max-width: 992px)" srcset="./images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere">
-                                    </source>
                                 </picture>
                             </div>
                             <div class="hébergements_card_content">
@@ -433,6 +432,5 @@
                 </a>
             </div>
         </footer>
-       
 </body>
 </html>
